# peninspector

./: .gitignore  CMakeLists.txt  README.md
config/: config.xml
docs/: PACKAGING.md
src/app/: CMakeLists.txt  canvas.cpp  canvas.h  dockwidget.cpp  dockwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  penconfig.cpp  penconfig.h  penconfigdockwidget.cpp  penconfigdockwidget.h  penconfigdockwidget.ui  penconfigmodel.cpp  penconfigmodel.h  penconfigquickdockwidget.cpp  penconfigquickdockwidget.h  peninfo.cpp  peninfo.h  peninfodockwidget.cpp  peninfodockwidget.h  peninfodockwidget.ui  peninfoquickdockwidget.cpp  peninfoquickdockwidget.h  peninspector.cpp  peninspector.h  pressurehistogram.cpp  pressurehistogram.h  pressurehistogramdockwidget.cpp  pressurehistogramdockwidget.h  pressurehistogrammodel.cpp  pressurehistogrammodel.h  pressurehistorydockwidget.cpp  pressurehistorydockwidget.h  pressurehistorymodel.cpp  pressurehistorymodel.h  quickdockwidget.cpp  quickdockwidget.h  tiltpreview.cpp  (+1 more)
src/resources/: app.qrc
src/resources/icons/: .gitignore  README.md  icon.icns  pendoctor.afdesign  peninspector.afdesign
src/resources/macos/: background.afdesign
src/resources/qml/: PenConfig.qml  PenInfo.qml  PenTiltView.qml  PressureHistogram.qml
src/resources/windows/: app.rc
tests/: CMakeLists.txt  test_pressurehistogrammodel.cpp
